# pumkin

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  agent.ts  builtins.ts  cli.ts  create-agent.bat  example.ts  loader.ts  mcp.ts  package-lock.json  package.json  rename-to-pumkin.ps1  run-agent.bat  store-test.ts  store.ts  tsconfig.json
desktop/: .gitignore  README.md  package-lock.json  package.json
desktop/scripts/: copy-static.mjs  setup-node.mjs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/binaries/: .gitkeep
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/dist-placeholder/: index.html
desktop/src-tauri/src/: lib.rs  main.rs
mcp-bundled/filesystem/: package-lock.json
site/: BRAND.md  README.md  SETUP.md  astro.config.mjs  package-lock.json  package.json
site/.astro/: data-store.json  settings.json
site/.vercel/output/: config.json
site/public/: robots.txt
site/src/components/: Buy.astro  FAQ.astro  Footer.astro  Header.astro  Hero.astro  What.astro  Who.astro
site/src/layouts/: DocsLayout.astro  Layout.astro
site/src/lib/: email.ts  spaces.ts  supabase.ts
site/src/pages/: brand.astro  index.astro  privacy.astro  terms.astro  thank-you.astro
web/: next.config.mjs  package-lock.json  package.json  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/mcp/: page.tsx
web/components/: ChatConsole.tsx  ConfirmingForm.tsx  EventStream.tsx  RunConsole.tsx
web/lib/: actions.ts  ollama.ts  runs.ts  server.ts
web/scripts/: copy-static.mjs
(+61 files in other folders)
