[package]
name = "agentkit-desktop"
version = "0.0.1"
description = "Desktop shell for agentkit"
edition = "2021"
rust-version = "1.77"

[lib]
name = "agentkit_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
